[gd_scene load_steps=2 format=2]

[ext_resource path="res://Spawner/Spawner.gd" type="Script" id=1]

[node name="Spawner" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Enemies" type="Node2D" parent="."]

[node name="EnemyNames" type="Node2D" parent="."]

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="BossTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_DifficultyTimer_timeout"]
[connection signal="timeout" from="BossTimer" to="." method="_on_BossTimer_timeout"]
